# SnakeGate

./: .gitignore  CMakeLists.txt  README.md
src/: corner_detection.cpp  corner_refinement.cpp  gate_detection.py  gate_detection2.py  histogram.cpp  main.cpp  seg.py  segmentation.py  temp.cpp  undistortion.cpp  undistortion.py
